--- a/pages/resule/index.wxml
+++ b/pages/resule/index.wxml
@@ -11,21 +11,21 @@
 
    <scroll-view class="result-right" scroll-into-view="{{toView}}" scroll-y="true" scroll-with-animation="true"> 
      <!-- <image src="{{imgbrand}}" class="brands"></image> -->
-    <view class="result-right-list result-right-message" id="gomessage">
+    <view class='{{dataMes.length < 1 ? "notshow":"result-right-list result-right-message"}}' id="gomessage">
       <view class="nav-show">
         <view class="nav-show-block"></view>
         <text>基础信息</text>
       </view>
       <block wx:for="{{dataMes}}" wx:key="{{index}}">
         <view class="list-content">
-          <view class="list-left">{{item.key}}</view>
-          <view class="list-right">{{item.value}}</view>
+          <text selectable class="list-left">{{item.key}}</text>
+          <text selectable class="list-right">{{item.value}}</text>
         </view>
       </block>
     </view> 
 
 
-     <view class="result-right-list result-right-price" id="goprice">
+     <view class= '{{dataPrice.length < 1 ? "notshow":"result-right-list result-right-price"}}' id="goprice">
       <view class="nav-show">
         <view class="nav-show-block"></view>
         <text>渠道价格</text>
@@ -35,8 +35,8 @@
         <view class="result-right-listcontent">
           <block wx:for="{{leftlist}}" wx:key="cell" wx:for-item="cellitem" wx:for-index="cellindex">
             <view class="list-content">
-              <view class="list-left">{{cellitem}}</view>
-              <view class="list-right">{{item[rightlist[cellindex]]}}</view>
+              <text selectable class="list-left">{{cellitem}}</text>
+              <text selectable class="list-right">{{item[rightlist[cellindex]]}}</text>
             </view>
           </block> 
         </view>
@@ -44,7 +44,7 @@
     </view> 
 
 
-     <view class="result-right-list result-right-replace" id="goreplace">
+     <view class='{{dataReplace.length < 1 ? "notshow":"result-right-list result-right-replace"}}' id="goreplace">
       <view class="nav-show">
         <view class="nav-show-block"></view>
         <text>替换件</text>
@@ -54,8 +54,8 @@
         <view class="result-right-listcontent">
           <block wx:for="{{replacelist}}" wx:key="cell" wx:for-item="cellitem" wx:for-index="cellindex">
             <view class="list-content">
-              <view class="list-left">{{cell[cellindex]}}</view>
-              <view class="list-right">{{item[replacerightlist[cellindex]]}}</view>
+              <text selectable class="list-left">{{cellitem}}</text>
+              <text selectable class="list-right">{{item[replacerightlist[cellindex]]}}</text>
             </view>
           </block> 
         </view>
@@ -63,7 +63,7 @@
     </view> 
 
 
-     <view class="result-right-list result-right-module" id="gomodule">
+     <view class='{{dataModule.length < 1 ? "notshow":"result-right-list result-right-module"}}' id="gomodule">
       <view class="nav-show">
         <view class="nav-show-block"></view>
         <text>组件</text>
@@ -73,8 +73,8 @@
         <view class="result-right-listcontent">
           <block wx:for="{{modulelist}}" wx:key="cell" wx:for-item="cellitem" wx:for-index="cellindex">
             <view class="list-content">
-              <view class="list-left">{{cellitem}}</view>
-              <view class="list-right">{{item[modulerightlist[cellindex]]}}</view>
+              <text selectable class="list-left">{{cellitem}}</text>
+              <text selectable class="list-right">{{item[modulerightlist[cellindex]]}}</text>
             </view>
           </block> 
         </view>
@@ -82,7 +82,7 @@
     </view> 
 
 
-      <view class="result-right-list result-right-technology" id="gotechnology">
+      <view class='{{dataTeach.length < 1 ? "notshow":"result-right-list result-right-technology"}}' id="goteach">
       <view class="nav-show">
         <view class="nav-show-block"></view>
         <text>技术信息</text>
@@ -91,11 +91,32 @@
       <view class="result-right-listtech">
         <block wx:for="{{dataTeach}}" wx:key="{{index}}">
           <view class="list-content">
-            <view class="list-left">{{item}}</view>
-            <view class="list-right"></view>
+            <text selectable class="list-left">{{item}}</text>
+            <text selectable class="list-right"></text>
           </view>
         </block>
       </view>
+    </view> 
+
+    <view class="{{dataTechnology.length < 1 ? 'notshow':'result-right-list result-right-module'}}" id="gotechnology">
+      <view class="nav-show">
+        <view class="nav-show-block"></view>
+        <text>适用车型</text>
+      </view> 
+
+      <block wx:for="{{dataTechnology}}" wx:key="{{index}}">
+        
+          <block wx:for="{{dataTechnology[index]}}" wx:key="cell" wx:for-item="cellitem" wx:for-index="cellindex">
+            <view class="result-right-listcontent">
+              <block wx:for="{{technologylist}}" wx:key="{{index}}">
+                <view class="list-content">
+                  <text selectable class='list-left'>{{item}}</text>
+                  <text selectable class="list-right">{{cellitem[technologyrightlist[index]]}}</text>
+                </view>
+              </block>
+            </view>
+          </block> 
+      </block>
     </view> 
   </scroll-view> 
 
