--- a/pages/resule/index.wxss
+++ b/pages/resule/index.wxss
@@ -1,4 +1,102 @@
 /* pages/resule/index.wxss */
+.search{
+  width: 100%;
+  height:88rpx;
+}
+.search-body{
+  width:100%;
+  height:88rpx;
+  background:#36373A;
+  position:fixed;
+  z-index:2;
+  display:flex;
+  align-items:center;
+}
+.search-input{
+  width:60%;
+  margin-left:2%;
+  /* padding-left:8%;
+  padding-right: 12%; */
+  padding: 0 12% 0 8%;
+  height:56rpx;
+  /* display:inline-flex; */
+  
+  background:#FFFFFF;
+  border:1px solid #D8D8D8;
+  border-radius:10rpx;  
+  font-size:26rpx;
+  color:#666666;
+  letter-spacing:0.27px;
+  line-height:56rpx;
+  /* position:relative; */
+  /* top:8rpx; */
+
+}
+.search-btn{
+  display:inline-flex;
+  height:66rpx;
+  justify-content:center;
+  font-size:34rpx;
+  position:relative;
+  width:17%;
+  align-items:center;
+  /* top:10rpx; */
+  color:#FFFFFF;
+}
+
+.search-icon,.cancel-icon{
+  display:inline-block;
+  position:absolute;
+  z-index: 2;
+}
+.search-icon{
+  left:4%;
+   top:30rpx; 
+}
+.cancel-icon{
+  right:21%;
+  top:26rpx;
+}
+
+.none-icon{
+  display: none;
+}
+
+
+/*未搜索状态  */
+.search-history{
+  width: 100%;
+}
+.search-history view{
+  padding:0 40rpx;
+  width:calc(100% - 80rpx);
+  height:89rpx;
+  border-bottom:1rpx solid #EEEEEE;
+  line-height:89rpx;
+  font-size: 14px;
+  color: #333333;
+  letter-spacing: 0px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.search-history view:nth-child(1){
+  background-color: #F9F9F9;
+  font-size: 10pt;
+  color: #999999;
+}
+
+/*search-wrong  */
+.show-wrong{
+  font-size:10pt;
+  color:#333333;
+  letter-spacing:0px;
+  line-height:28px;
+  text-align:center;
+  padding-top:100rpx;
+
+}
 .result{
   display: flex;
   flex-direction:column;
@@ -6,41 +104,43 @@
 
 .result-left{
   display: inline-block;
-  padding:5px 0;
+  /* padding:5px 0; */
   position:fixed;
   background-color:white;
   z-index:2;
   width:100%;
   box-shadow: 0 1px 8px 0 rgba(0,0,0,0.4);
+  top:88rpx;
+
 }
 .result-left-position{
-  /* padding-top: 30rpx; */
   display:flex;
-  /* height:40px; */
   flex-direction:row;
-  justify-content: space-between;
-
+  justify-content:space-around;
+  height: 80rpx;
 }
 
 .resule-left-list{
   font-size:8pt;
   color:#333333;
   letter-spacing:0px;
-  padding:0 5px;
-  margin:auto;
-
-  /* margin:0 auto 53rpx 28rpx; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .resule-left-listclick{
   color:#C8372B;
   font-size:8pt;
   letter-spacing:0px;
-  padding:0 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border-bottom:2px solid #C8372B;
 }
 
 .result-right{
-  margin-top:25px;
+  margin-top:35px;
   display: inline-block;
   width: 100%;
   height:100vh;
@@ -78,7 +178,8 @@
   display:flex;
   width:100%;
   overflow:hidden;
-  padding:24rpx 0 0 0;
+  padding:12rpx 0 12rpx 0;
+  border-bottom:1px dashed #d8d8d8;
 }
 
 .list-left{
@@ -110,8 +211,8 @@
 
 /*统一样式 父级处理  */
 .result-right-listcontent,.result-right-listtech{
-  background:#FFFFFF;
-  border:1rpx solid #D8D8D8;
+  background:#F6F6F6;
+  /* border:1rpx solid #D8D8D8; */
   display:flex;
   flex-direction:column;
   padding:16rpx 0;
