--- a/pages/resule/index.wxss
+++ b/pages/resule/index.wxss
@@ -108,7 +108,7 @@
   position:fixed;
   background-color:white;
   z-index:2;
-  width:100%;
+  min-width:100%;
   box-shadow: 0 1px 8px 0 rgba(0,0,0,0.4);
   top:88rpx;
 
@@ -121,7 +121,7 @@
 }
 
 .resule-left-list{
-  font-size:8pt;
+  font-size:10pt;
   color:#333333;
   letter-spacing:0px;
   display: flex;
@@ -131,7 +131,7 @@
 
 .resule-left-listclick{
   color:#C8372B;
-  font-size:8pt;
+  font-size:10pt;
   letter-spacing:0px;
   display: flex;
   flex-direction: column;
