--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,5 +1,20 @@
 <!--index.wxml-->
-<view class='homebody'>
+<view class='person'>
+  <view class='databody'>
+    <block wx:for="{{branddata.data}}" wx:key="{{index}}">
+      <view class='datatitle'>{{item.title}}</view>
+      <block wx:for="{{item.data}}" wx:key="cell" wx:for-item="cellitem" >
+          <view class="{{selectid==cellitem.id?'datalist  datalistselect':'datalist'}}" 
+          data-id="{{cellitem.id}}" bindtap='setSelectid'>
+            <view class='datalist-brand'>{{cellitem.contents[0]}}</view>
+            <view class='datalist-marey'>{{cellitem.contents[2]}}</view>
+          </view>
+      </block>
+    </block>
+  </view>
+  <button class='paybtn' bindtap='payBtn'>确认支付</button>
+</view>
+<!-- <view class='homebody'>
   <view class="home-search">
       <icon type="search" size="15" class="search-icon"></icon>
       <input class="search-input" 
@@ -20,9 +35,9 @@
         </block>
       </view>
   </view>
-</view>
+</view> -->
 
-<image class="search-img" mode='aspectFit' src="{{imgsrc}}"></image>
+<!-- <image class="search-img" mode='aspectFit' src="{{imgsrc}}"></image> -->
 
 <!-- <view class="container">
   <view class="userinfo">
