--- a/pages/resule/index.wxss
+++ b/pages/resule/index.wxss
@@ -86,17 +86,46 @@
   font-size: 10pt;
   color: #999999;
 }
-
 /*search-wrong  */
 .show-wrong{
+
+}
+.wrong-mes{
   font-size:10pt;
   color:#333333;
   letter-spacing:0px;
   line-height:28px;
   text-align:center;
   padding-top:100rpx;
-
 }
+
+/*多品牌处理  */
+.brand-content{
+  display: flex;
+  background: #fff;
+  padding: 10rpx 20rpx;
+}
+.brand-imgname{
+  border: 1px solid transparent;
+  float: left;
+  text-align: center;
+  width: 98px;
+  height: 90px;
+}
+.brand-title{
+  background-color:#4A90E2;
+  text-align:center;
+  line-height:40px;
+  color:white;
+  font-size:11pt;
+}
+.brand-img{
+  width: 98px;
+  height: 58px;
+}
+
+/*==============  */
+
 .result{
   display: flex;
   flex-direction:column;
@@ -239,6 +268,17 @@
 
 .result-right-listtech .list-content:nth-child(5n){
   margin-top: 20rpx;
+}
+
+/*添加图片  */
+.home-img{
+  width: 100%;
+  margin-top: 20vh;
+}
+
+.imageone,.imagetwo{
+  margin: 0 auto;
+  display: block;
 }
 
 .notshow{
