--- a/pages/resule/index.wxss
+++ b/pages/resule/index.wxss
@@ -87,9 +87,6 @@
   color: #999999;
 }
 /*search-wrong  */
-.show-wrong{
-
-}
 .wrong-mes{
   font-size:10pt;
   color:#333333;
@@ -104,6 +101,8 @@
   display: flex;
   background: #fff;
   padding: 10rpx 20rpx;
+  flex-direction:row;
+  flex-wrap:wrap;
 }
 .brand-imgname{
   border: 1px solid transparent;
@@ -136,7 +135,7 @@
   /* padding:5px 0; */
   position:fixed;
   background-color:white;
-  z-index:2;
+  z-index:4;
   min-width:100%;
   box-shadow: 0 1px 8px 0 rgba(0,0,0,0.4);
   top:88rpx;
@@ -278,6 +277,28 @@
 /* .result-right-tosell {
   padding-bottom: 50px;
 } */
+
+/*问题反馈  */
+.feekbackinput{
+  margin:20rpx 0;
+}
+.feed-input{
+  min-height: 300rpx;
+  border:1px solid black;
+  padding:10rpx;
+  width:auto;
+  height: auto;
+  border-radius: 10rpx;
+}
+.feed-btn{
+  height:80rpx;
+  margin:20rpx 0;
+  font-size:12pt;
+}
+
+.searchmore{
+  margin: 30rpx 0;
+}
 
 /*添加图片  */
 .home-img{
